<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cs428.dit.diabetestracker.AddFoodItemActivity"
   >

    <EditText
        android:id="@+id/foodNameTextfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="Food Name"
        android:maxEms="10"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/view_calories_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calories_icon"
            />

        <EditText
            android:id="@+id/foodCaloriesTextfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:focusable="true"
            android:hint="Calories"
            android:inputType="numberDecimal"
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/view_sugar_green_64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sugar_green64" />

        <EditText
            android:id="@+id/sugarInGramsTextfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:ems="10"
            android:focusable="true"
            android:hint="Sugar in grams"
            android:inputType="numberDecimal"
            android:singleLine="true" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_save_food_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="88dp"
        android:layout_marginTop="65dp"
        android:backgroundTint="#8EE152"
        android:focusable="true"
        android:text="save"
        android:textColor="#FFFFFF" />

</LinearLayout>